tests/snapshots/html_test__html_doc_files_multiple-4.snap
---
source: tests/html_test.rs
expression: files.get(file_name).unwrap()
---
<!DOCTYPE html>
<html lang="en">
  <head>
    <meta charset="utf-8" />
    <meta http-equiv="refresh" content="0; url=..&#x2F;.&#x2F;.&#x2F;~&#x2F;A.html" />
    <title>Redirecting…</title>
  </head>
  <body>
    <a href="..&#x2F;.&#x2F;.&#x2F;~&#x2F;A.html">Click here if you are not redirected.</a>
  </body>
</html>
